Java launcher can not parse Chinese character when system locale is set to UTF-8

XMLWordPrintable

    • b22
    • generic
    • windows

        Create on behalf of Glavo <zjx001202@gmail.com>
        ----

        When we turned on "Use Unicode UTF-8 for worldwide language support"(something like https://stackoverflow.com/questions/56419639/what-does-beta-use-unicode-utf-8-for-worldwide-language-support-actually-do) option, java default launcher can not parse arguments that containing Chinese characters:

        java Foo 你好世界

        String[]args are actually garbled Chinese characters.

              Assignee:
              Naoto Sato
              Reporter:
              Yi Yang
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: