8272352: Java launcher can not parse Chinese character when system locale is set to UTF-8